# trip-planner-ai

./: .env.example  .gitignore  README.md  agents.py  api.py  crew.py  job_manager.py  litellm_config.yaml  makefile  pyproject.toml  tasks.py
configs/: model.py
tools/: browser_tools.py  image_search_tools.py  search_duckduckgo_tools.py  search_weather_info_tools.py  sky_scanner_tools.py  web_scraper_tools.py
